agrgegamos un parrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p>
         Welcome a todos :)
     </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, et consequatur. Sequi, perspiciatis minus! Repellat ipsa, sint id reiciendis mollitia consectetur recusandae exercitationem incidunt accusamus ab non ut officiis hic.
+    </p>
 </body>
 </html>
